--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div class="main-container">
     <header>
         <h1>La Casa Blackmont</h1>
-        <img src="emblema.jpg" alt="Emblema de la Familia">
+        <img src="casa blackmont.png" alt="Emblema de la Familia">
     </header>
 
     <div class="container">
