--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            background-image: url(https://4kwallpapers.com/images/wallpapers/dragon-game-of-thrones-black-background-2048x2048-8379.jpg);
         }
         header {
             display: flex;
@@ -106,7 +105,7 @@
 
 <div class="main-container">
     <header>
-        <h1>La Casa Blackmont</h1>
+        <h1 style="background-image: url(https://4kwallpapers.com/images/wallpapers/dragon-game-of-thrones-black-background-2048x2048-8379.jpg);">La Casa Blackmont</h1>
         <img src="img/casa blackmont.png" alt="Emblema de la Familia">
     </header>
 
