--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <body>
 
 <div class="main-container">
-    <header>
-        <h1 style="background-image: url(https://4kwallpapers.com/images/wallpapers/dragon-game-of-thrones-black-background-2048x2048-8379.jpg);">La Casa Blackmont</h1>
+    <header style="background-image: url(https://4kwallpapers.com/images/wallpapers/dragon-game-of-thrones-black-background-2048x2048-8379.jpg);">
+        <h1 style="color: white;">La Casa Blackmont</h1>
         <img src="img/casa blackmont.png" alt="Emblema de la Familia">
     </header>
 
