--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
 <div class="main-container">
-    <header style="background-image: url(https://4kwallpapers.com/images/wallpapers/dragon-game-of-thrones-black-background-2048x2048-8379.jpg);">
+    <header style="background-image: url(https://media.cntraveler.com/photos/5718fc273658675c4f786709/16:9/w_1280,c_limit/game-of-thrones-alazar-of-seville-02-cr-alamy-EHD2RD.jpg);">
         <h1 style="color: white;">La Casa Blackmont</h1>
         <img src="img/casa blackmont.png" alt="Emblema de la Familia">
     </header>
