--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px;
-            background-color: #d4af37;
-            border-bottom: 3px solid #8b4513;
+            background-image: url(https://media.cntraveler.com/photos/5718fc273658675c4f786709/16:9/w_1280,c_limit/game-of-thrones-alazar-of-seville-02-cr-alamy-EHD2RD.jpg);
+            background-position: center top
+            border-bottom: 3px solid #2c190c;
         }
         header h1 {
             margin: 0;
@@ -104,7 +105,7 @@
 <body>
 
 <div class="main-container">
-    <header style="background-image: url(https://media.cntraveler.com/photos/5718fc273658675c4f786709/16:9/w_1280,c_limit/game-of-thrones-alazar-of-seville-02-cr-alamy-EHD2RD.jpg);">
+    <header>
         <h1 style="color: white;">La Casa Blackmont</h1>
         <img src="img/casa blackmont.png" alt="Emblema de la Familia">
     </header>
