--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
             align-items: center;
             padding: 20px;
             background-image: url(https://media.cntraveler.com/photos/5718fc273658675c4f786709/16:9/w_1280,c_limit/game-of-thrones-alazar-of-seville-02-cr-alamy-EHD2RD.jpg);
-            background-position: center top
+            background-position: center top;
+            background-size: cover;
             border-bottom: 3px solid #2c190c;
+            height: 200px; /* Ajusta la altura según lo necesites */
         }
         header h1 {
             margin: 0;
             font-size: 36px;
+            color: #8b4513;
+            text-decoration: underline;
+            text-decoration-thickness: 2px;
+            text-decoration-color: #8b4513;
         }
         header img {
             width: 80px;
