--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             background-position: center top;
             background-size: cover;
             border-bottom: 3px solid #2c190c;
-            height: 200px; /* Ajusta la altura según lo necesites */
+            height: 180px; /* Ajusta la altura según lo necesites */
         }
         header h1 {
             margin: 0;
@@ -112,7 +112,7 @@
 
 <div class="main-container">
     <header>
-        <h1 style="color: white;">La Casa Blackmont</h1>
+        <h1>La Casa Blackmont</h1>
         <img src="img/casa blackmont.png" alt="Emblema de la Familia">
     </header>
 
