--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             background-position: center top;
             background-size: cover;
             border-bottom: 3px solid #2c190c;
-            height: 180px; /* Ajusta la altura según lo necesites */
+            height: 120px; /* Ajusta la altura según lo necesites */
         }
         header h1 {
             margin: 0;
             font-size: 36px;
-            color: #8b4513;
+            color: #301E0D;
             text-decoration: underline;
-            text-decoration-thickness: 2px;
-            text-decoration-color: #8b4513;
+            text-decoration-thickness: 4px;
+            text-decoration-color: #301E0D;
         }
         header img {
             width: 80px;
