--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             flex-direction: column;
         }
         header {
+            position: relative;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -36,7 +37,19 @@
             background-position: center top;
             background-size: cover;
             border-bottom: 3px solid #2c190c;
-            height: 120px; /* Ajusta la altura según lo necesites */
+            height: 140px; /* Ajusta la altura según lo necesites */
+            color: white; /* Cambia el color del texto si es necesario */
+            z-index: 1;
+        }
+        header::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Color negro con 50% de transparencia */
+            z-index: -1; /* Coloca el pseudo-elemento detrás del contenido del header */
         }
         header h1 {
             margin: 0;
