--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Color negro con 50% de transparencia */
+            background-iamge: url(https://www.imgbase.info/images/safe-wallpapers/tv_movies/ghost_busters/46038_ghost_busters_dorne.jpg);
+            opacity: 0.6;
             z-index: -1; /* Coloca el pseudo-elemento detrás del contenido del header */
         }
         header h1 {
