--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url(https://www.imgbase.info/images/safe-wallpapers/tv_movies/ghost_busters/46038_ghost_busters_dorne.jpg);
-            opacity: 0.6;
-            z-index: 2; /* Coloca el pseudo-elemento detrás del contenido del header */
+            background-color: rgb(218, 141, 7, 0.7)
+            z-index: -1; /* Coloca el pseudo-elemento detrás del contenido del header */
         }
         header h1 {
             margin: 0;
