--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(218, 141, 7, 0.7)
+            background-color: rgba(218, 141, 7, 0.7);
             z-index: -1; /* Coloca el pseudo-elemento detrás del contenido del header */
         }
         header h1 {
