--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <div class="main-container">
     <header>
-        <h1>La Casa Blackmont</h1>
+        <h1>La Casa del Buitre</h1>
         <img src="img/casa blackmont.png" alt="Emblema de la Familia">
     </header>
 
@@ -142,8 +142,8 @@
         <main class="content">
             <div class="decorated-space"></div>
             <div id="capitulo1">
-                <h2>La Reunión de los Buitres</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.
+                <h2>El Regreso a Montenegro</h2>
+                <p><span style="font-size: 24px">A</span>trás habían quedado el fuego y el olor a carne quemada. Los había seguido la promesa de una guerra. Por primera vez después de años de paz, se pondría a prueba el filo y la tenacidad de la punta de la lanza de Dorne. Hoy los recibía Montenegro, la misma que los despidió tras el mensaje del Rey; pero ya no era la misma. O eran otros los que cambiaron.
                 </p>
             </div>
             <div id="capitulo2" style="display:none;">
