--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <aside class="sidebar">
             <h2 style="color: white">Capítulos</h2>
             <ul>
-                <li><a href="#capitulo1" onclick="showChapter('capitulo1')" style="color: white;">La Reunión de los Buitres</a></li>
+                <li><a href="#capitulo1" onclick="showChapter('capitulo1')" style="color: white;">El Regreso a Montenegro</a></li>
                 <li><a href="#capitulo2" onclick="showChapter('capitulo2')" style="color: white">-</a></li>
                 <li><a href="#capitulo3" onclick="showChapter('capitulo3')" style="color: white;">-</a></li>
             </ul>
@@ -143,7 +143,7 @@
             <div class="decorated-space"></div>
             <div id="capitulo1">
                 <h2>El Regreso a Montenegro</h2>
-                <p><span style="font-size: 24px">A</span>trás habían quedado el fuego y el olor a carne quemada. Los había seguido la promesa de una guerra. Por primera vez después de años de paz, se pondría a prueba el filo y la tenacidad de la punta de la lanza de Dorne. Hoy los recibía Montenegro, la misma que los despidió tras el mensaje del Rey; pero ya no era la misma. O eran otros los que cambiaron.
+                <p><span style="font-size: 24px; font-weight: bold">A</span>trás habían quedado el fuego y el olor a carne quemada. Los había seguido la promesa de una guerra. Por primera vez después de años de paz, se pondría a prueba el filo y la tenacidad de la punta de la lanza de Dorne. Hoy los recibía Montenegro, la misma que los despidió tras el mensaje del Rey; pero ya no era la misma. O eran otros los que cambiaron.
                 </p>
             </div>
             <div id="capitulo2" style="display:none;">
