--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             text-decoration: underline;
             text-decoration-thickness: 4px;
             text-decoration-color: #301E0D;
+            text-align: center;
         }
         header img {
             width: 80px;
